[package]
name = "liron"
version = "0.1.0"
authors = ["Milo <50248166+Milo123459@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
term = "0.7.0"
colored = "2.0.0"
clap = "2.33.3"